fix: add dark mode support to project

--- a/apps/client/src/common/components/client-modal/RedirectClientModal.module.scss
+++ b/apps/client/src/common/components/client-modal/RedirectClientModal.module.scss
@@ -1,6 +1,4 @@
 .localhostInputAddon {
   background: #2d2d2d;
   border: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
 }
